--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <div class="flex-container">
-            <div class="item-1">div</div>
-            <div class="item-2">w=250px</div>
-            <div class="item-3">h=250px</div>
-            <div class="item-4">w/h=300px</div>
-            <div class="item-5">w=350px</div>
-            <div class="item-6">w=350px</div>
+            <div class="item-1">div <p>1</p></div>
+            <div class="item-2">w=250px <p>2</p></div>
+            <div class="item-3">h=250px <p>3</p></div>
+            <div class="item-4">w/h=300px <p>4</p></div>
+            <div class="item-5">w=350px <p>5</p></div>
+            <div class="item-6">w=350px <p>6</p></div>
         </div>
     </body>
 </html>
